--- a/src/components/ChatListItem.css
+++ b/src/components/ChatListItem.css
@@ -9,6 +9,9 @@
 .chatListItem:hover{
     background-color: #323739;
 }
+.chatListItem.active {
+    background-color: #323739;
+}
 .chatListItem--avatar{
     width: 50px;
     height: 50px;
