--- a/src/components/ChatWindow.css
+++ b/src/components/ChatWindow.css
@@ -41,3 +41,40 @@
     align-items: center;
     cursor: pointer;
 }
+
+.chatWindow--body{
+    flex:1;
+    overflow: auto;
+    background-color: #1e2224;
+    background-size: 500px;
+    background-position: center;
+    background-image: url('https://i.pinimg.com/originals/85/ec/df/85ecdf1c3611ecc9b7fa85282d9526e0.jpg');
+}
+
+.chatWindow--footer{
+    height: 62px;
+    display: flex;
+    align-items: center;
+}
+.chatWindow--pre{
+    display: flex;
+    margin: 0 15px;
+}
+.chatWindow--inputarea{
+    flex:1;
+}
+.chatWindow--input{
+    width: 100%;
+    height: 40px;
+    border: 0;
+    outline: 0;
+    background-color: #fff;
+    border-radius: 20px;
+    font-size: 15px;
+    color: #4a4a4a;
+    padding-left: 15px;
+}
+.chatWindow--pos{
+    display: flex;
+    margin: 0 15px;
+}
